syntax = "proto3";

package infragmo.auditum.v1alpha1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "auditumv1alpha1";

// Represents a project.
message Project {
  // Internal project identifier.
  string id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      // This is for methods that refer to this field as HTTP path parameter.
      field_configuration: {path_param_name: "project_id"}
    }
  ];

  // Time when the project was created.
  google.protobuf.Timestamp create_time = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Display name of the project.
  //
  // REQUIREMENTS.
  // The value must be 3-64 characters long.
  string display_name = 3 [(google.api.field_behavior) = REQUIRED];

  // Whether to allow updating records for this project.
  // If set, overrides the global setting.
  // Defaults to unset.
  google.protobuf.BoolValue update_record_enabled = 4 [(google.api.field_behavior) = OPTIONAL];

  // Whether to allow deleting records for this project.
  // If set, overrides the global setting.
  // Defaults to unset.
  google.protobuf.BoolValue delete_record_enabled = 5 [(google.api.field_behavior) = OPTIONAL];
}
